--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -7,65 +7,36 @@
         <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>09:45 - 10:00</td>        <!-- time    -->
+        <td>Introduction</td>        <!-- content -->
       </tr>
       <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>10:00 - 10:45</td>        <!-- time    -->
+        <td>Lecture on Viruses and -omics Techniques</td>        <!-- content -->
       </tr>
-    </table>
-  </div>
-  <div class="col-md-6"> <!-- right column -->
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+      <tr>
+        <td>10:45 - 11:15</td>
+        <td>Break/Questions</td>
       </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+      <tr>
+        <td>11:15 - 12:00</td>
+        <td>Lecture on RDM and Virus Infrastructure</td>
       </tr>
-      <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+      <tr>
+        <td>12:00 - 13:30</td>
+        <td>Lunch Break</td>
       </tr>
-    </table>
-  </div>
-</div>
-<div class="row">        <!-- days 3 and 4 -->
-  <div class="col-md-6"> <!-- left column -->
-    <h3>Day 3</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+      <tr>
+        <td>13:30 - 14:00</td>
+        <td>Project Explanation</td>
       </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+      <tr>
+        <td>14:00 - 16:30</td>
+        <td>Workshop Projects, Break as Needed</td>
       </tr>
-      <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-    </table>
-  </div>
-  <div class="col-md-6"> <!-- right column -->
-    <h3>Day 4</h3>
-    <table class="table table-striped">
-      <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td>End</td>
-        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
+      <tr>
+        <td>16:30 - 17:00</td>
+        <td>Wrap Up</td>
       </tr>
     </table>
   </div>
