--- a/_includes/hint.html
+++ b/_includes/hint.html
@@ -3,16 +3,16 @@
 {% endcomment %}
 
 {% if page.tips == nil %}
-{% assign episode_keypoints = include.episode_keypoints %}
+{% assign hint = include.hint %}
 {% else %}
-{% assign episode_keypoints = page.tips %}
+{% assign hint = page.tips %}
 {% endif %}
 
 <blockquote class="tips">
   <h2>Key Points</h2>
   <ul>
-    {% for keypoint in episode_keypoints %}
-    <li>{{ keypoint|markdownify }}</li>
+    {% for keypoint in hint %}
+    <li>{{ tips|markdownify }}</li>
     {% endfor %}
   </ul>
 </blockquote>
